[gd_scene load_steps=5 format=3 uid="uid://biq73pieyhg4y"]

[ext_resource type="Script" path="res://GuestBook/GuestBook.gd" id="1_i5vid"]
[ext_resource type="Script" path="res://FamousGuests/Background.gd" id="2_v86rj"]
[ext_resource type="Theme" uid="uid://c8expo8ultkcm" path="res://Assets/Themes/visitorTheme.tres" id="3_8lblm"]
[ext_resource type="Texture2D" uid="uid://lge4q45juhj0" path="res://Assets/Textures/Logos/logo_color_dott_300dpi.png" id="4_a4l51"]

[node name="Root" type="Control" node_paths=PackedStringArray("forward_button", "back_button", "submit_button", "Star_One", "Star_Two", "Star_Three", "Star_Four", "Star_Five", "Age_Child", "Age_Teen", "Age_Adult", "Age_Senior")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i5vid")
forward_button = NodePath("HBoxContainer/Button_Continue")
back_button = NodePath("HBoxContainer/Button_Return")
submit_button = NodePath("Button_Submit")
Star_One = NodePath("Control/StarContainer/VBoxContainer/Satisfaction/Button_VBad")
Star_Two = NodePath("Control/StarContainer/VBoxContainer/Satisfaction/Button_Bad")
Star_Three = NodePath("Control/StarContainer/VBoxContainer/Satisfaction/Button_Meh")
Star_Four = NodePath("Control/StarContainer/VBoxContainer/Satisfaction/Button_Good")
Star_Five = NodePath("Control/StarContainer/VBoxContainer/Satisfaction/Button_VGood")
Age_Child = NodePath("Control/AgeContainer/VBoxContainer/Age_Group/Button_Baby")
Age_Teen = NodePath("Control/AgeContainer/VBoxContainer/Age_Group/Button_Young")
Age_Adult = NodePath("Control/AgeContainer/VBoxContainer/Age_Group/Button_Adult")
Age_Senior = NodePath("Control/AgeContainer/VBoxContainer/Age_Group/Button_Senior")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 717.0
offset_bottom = 1274.0
theme = ExtResource("3_8lblm")
script = ExtResource("2_v86rj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 790.0
offset_right = 526.0
offset_bottom = 855.0

[node name="Button_Return" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
text = "Zurück"

[node name="Button_Continue" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
text = "Weiter"

[node name="Button_Home" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 196.0
offset_bottom = 81.0
theme = ExtResource("3_8lblm")
text = "Startseite"

[node name="Control" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
anchor_left = -0.001
anchor_top = 0.157
anchor_right = 1.0
anchor_bottom = 0.617
offset_left = -0.28
offset_top = 242.04
offset_right = 2218.0
offset_bottom = 0.239929

[node name="StarContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 71.0
offset_top = -36.0
offset_right = 654.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/StarContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/StarContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_8lblm")
theme_override_font_sizes/font_size = 23
text = "Wie würdest Du deinen Besuch zum CSM bewerten?"
vertical_alignment = 2

[node name="Satisfaction" type="HBoxContainer" parent="Control/StarContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8lblm")

[node name="Button_VBad" type="Button" parent="Control/StarContainer/VBoxContainer/Satisfaction"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Very Bad"

[node name="Button_Bad" type="Button" parent="Control/StarContainer/VBoxContainer/Satisfaction"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Bad"

[node name="Button_Meh" type="Button" parent="Control/StarContainer/VBoxContainer/Satisfaction"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Meh"

[node name="Button_Good" type="Button" parent="Control/StarContainer/VBoxContainer/Satisfaction"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Good"

[node name="Button_VGood" type="Button" parent="Control/StarContainer/VBoxContainer/Satisfaction"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Very Good"

[node name="AgeContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_left = 805.0
offset_top = -35.0
offset_right = 1388.0
offset_bottom = 182.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/AgeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/AgeContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_8lblm")
theme_override_font_sizes/font_size = 23
text = "Wie alt bist du?"
vertical_alignment = 2

[node name="Age_Group" type="HBoxContainer" parent="Control/AgeContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8lblm")

[node name="Button_Baby" type="Button" parent="Control/AgeContainer/VBoxContainer/Age_Group"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
toggle_mode = true
text = "I'm a baby"

[node name="Button_Young" type="Button" parent="Control/AgeContainer/VBoxContainer/Age_Group"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
toggle_mode = true
text = "I'm young"

[node name="Button_Adult" type="Button" parent="Control/AgeContainer/VBoxContainer/Age_Group"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
toggle_mode = true
text = "I'm old"

[node name="Button_Senior" type="Button" parent="Control/AgeContainer/VBoxContainer/Age_Group"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
toggle_mode = true
text = "I'm old"

[node name="LanguageContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_left = 1530.0
offset_top = 64.0
offset_right = 2113.0
offset_bottom = 167.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LanguageContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/LanguageContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_8lblm")
theme_override_font_sizes/font_size = 23
text = "Was ist deine Muttersprache?"
vertical_alignment = 2

[node name="OptionButton" type="OptionButton" parent="Control/LanguageContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_8lblm")
item_count = 12
popup/item_0/text = "Chinese"
popup/item_0/id = 0
popup/item_1/text = "Spanish"
popup/item_1/id = 1
popup/item_2/text = "English"
popup/item_2/id = 2
popup/item_3/text = "Arabic"
popup/item_3/id = 3
popup/item_4/text = "Hindi"
popup/item_4/id = 4
popup/item_5/text = "Portugese"
popup/item_5/id = 5
popup/item_6/text = "Italian"
popup/item_6/id = 6
popup/item_7/text = "French"
popup/item_7/id = 7
popup/item_8/text = "Russian"
popup/item_8/id = 8
popup/item_9/text = "Japanese"
popup/item_9/id = 9
popup/item_10/text = "Polish"
popup/item_10/id = 10
popup/item_11/text = "Other"
popup/item_11/id = 11

[node name="MessageContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_left = 2248.0
offset_top = 53.0
offset_right = 2831.0
offset_bottom = 204.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MessageContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MessageContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_8lblm")
theme_override_font_sizes/font_size = 23
text = "Hinterlasse eine Nachricht:"
vertical_alignment = 2

[node name="LineEdit" type="LineEdit" parent="Control/MessageContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8lblm")
placeholder_text = "..."
max_length = 250

[node name="Button_Submit" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 242.0
offset_top = 965.0
offset_right = 476.0
offset_bottom = 1046.0
theme = ExtResource("3_8lblm")
text = "Submit"

[node name="Promt_Panel" type="Control" parent="."]
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1274.0

[node name="ColorRect" type="ColorRect" parent="Promt_Panel"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1273.0
color = Color(0.00392157, 0.00392157, 0.00392157, 0.768627)

[node name="ColorRect2" type="ColorRect" parent="Promt_Panel"]
layout_mode = 0
offset_left = 88.0
offset_top = 544.0
offset_right = 648.0
offset_bottom = 858.0

[node name="VBoxContainer" type="VBoxContainer" parent="Promt_Panel/ColorRect2"]
layout_mode = 0
offset_right = 561.0
offset_bottom = 312.0

[node name="Label" type="Label" parent="Promt_Panel/ColorRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_8lblm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Submit another answer?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Promt_Panel/ColorRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button_No" type="Button" parent="Promt_Panel/ColorRect2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
text = "NEIN
"

[node name="Button_Yes" type="Button" parent="Promt_Panel/ColorRect2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8lblm")
text = "JA"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 1114.0
offset_right = 591.0
offset_bottom = 1226.0
texture = ExtResource("4_a4l51")
expand_mode = 1

[connection signal="pressed" from="HBoxContainer/Button_Return" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_Continue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="Button_Home" to="." method="_on_button_home_pressed"]
[connection signal="pressed" from="Control/StarContainer/VBoxContainer/Satisfaction/Button_VBad" to="." method="_on_button_v_bad_pressed"]
[connection signal="pressed" from="Control/StarContainer/VBoxContainer/Satisfaction/Button_Bad" to="." method="_on_button_bad_pressed"]
[connection signal="pressed" from="Control/StarContainer/VBoxContainer/Satisfaction/Button_Meh" to="." method="_on_button_meh_pressed"]
[connection signal="pressed" from="Control/StarContainer/VBoxContainer/Satisfaction/Button_Good" to="." method="_on_button_good_pressed"]
[connection signal="pressed" from="Control/StarContainer/VBoxContainer/Satisfaction/Button_VGood" to="." method="_on_button_v_good_pressed"]
[connection signal="pressed" from="Control/AgeContainer/VBoxContainer/Age_Group/Button_Baby" to="." method="_on_button_baby_pressed"]
[connection signal="pressed" from="Control/AgeContainer/VBoxContainer/Age_Group/Button_Young" to="." method="_on_button_young_pressed"]
[connection signal="pressed" from="Control/AgeContainer/VBoxContainer/Age_Group/Button_Adult" to="." method="_on_button_adult_pressed"]
[connection signal="pressed" from="Control/AgeContainer/VBoxContainer/Age_Group/Button_Senior" to="." method="_on_button_senior_pressed"]
[connection signal="item_selected" from="Control/LanguageContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="text_changed" from="Control/MessageContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Button_Submit" to="." method="_on_button_submit_pressed"]
[connection signal="pressed" from="Promt_Panel/ColorRect2/VBoxContainer/HBoxContainer/Button_No" to="." method="_on_button_no_pressed"]
[connection signal="pressed" from="Promt_Panel/ColorRect2/VBoxContainer/HBoxContainer/Button_Yes" to="." method="_on_button_yes_pressed"]
